Avance cliente, registar turnos

--- a/client/src/app/Components/registro-turnos/registro-turnos.component.html
+++ b/client/src/app/Components/registro-turnos/registro-turnos.component.html
@@ -1,1 +1,12 @@
-<p>registro-turnos works!</p>
+<div class="tabset container p-3 mt-5 shadow-lg">
+  <ul class="tabset-nav ">
+    <li><a id="#tab1" class="active">Pestaña 1</a></li>
+    <li><a id="#tab2">Pestaña 2</a></li>
+    <li><a id="#tab3">Pestaña 3</a></li>
+  </ul>
+  <div class="tabset-panels">
+    <div id="tab1" class="tab-panel active">Contenido de la Pestaña 1</div>
+    <div id="tab2" class="tab-panel">Contenido de la Pestaña 2</div>
+    <div id="tab3" class="tab-panel">Contenido de la Pestaña 3</div>
+  </div>
+</div>
