avance con el formulario del usuario

--- a/client/src/app/Components/registro-turnos/registro-turnos.component.css
+++ b/client/src/app/Components/registro-turnos/registro-turnos.component.css
@@ -43,9 +43,14 @@
   
   .tab-panel {
     display: none;
+    
   }
   
   .tab-panel.active {
-    display: block;
+    display: flex;
+    min-height: 60vh;
+    max-height: 68vh;
+    justify-content: center;
+    padding: 3rem;
   }
   
