--- a/client/src/app/Components/registro-turnos/registro-turnos.component.html
+++ b/client/src/app/Components/registro-turnos/registro-turnos.component.html
@@ -1,15 +1,21 @@
 <div class="tabset container pt-3 pb-1 mt-5 shadow-lg">
   <ul class="tabset-nav">
-    <li><a id="#tab1" class="active">Pestaña 1</a></li>
-    <li><a id="#tab2">Pestaña 2</a></li>
-    <li><a id="#tab3">Pestaña 3</a></li>
+    <li><a id="#tab1" class="active">Validar datos</a></li>
+    <li><a id="#tab2">Elegir tipo de turno</a></li>
+    <li><a id="#tab3">Generar turno</a></li>
   </ul>
   <div class="tabset-panels">
     <div id="tab1" class="tab-panel active">
       <form>
         <div class="mb-3">
           <label class="form-label">Tipo de documento</label>
-          <select class="form-control" [(ngModel)]="selecionado">
+          <select
+            class="form-control"
+            #tipo
+            name="role"
+            [(ngModel)]="selecionado"
+          >
+            <option value="" disabled selected>Elija un tipo</option>
             <option *ngFor="let tipo of tipos" [value]="tipo">
               {{ tipo }}
             </option>
@@ -17,23 +23,50 @@
         </div>
         <div class="mb-3">
           <label class="form-label">Numero de documento</label>
-          <input type="text" class="form-control" />
+          <input
+            type="text"
+            class="form-control"
+            #numeroDoc
+            name="numeroDocu"
+            [(ngModel)]="numeroDocumento"
+          />
         </div>
 
-        <button type="submit" class="btn btn-primary">Verificar</button>
+        <button
+          type="submit"
+          class="btn btn-primary"
+          #bttnVerificar
+          [disabled]="!tipo.value || !numeroDoc.value"
+          (click)="verificar(bttnVerificar)"
+        >
+          Verificar
+        </button>
       </form>
     </div>
-    <div id="tab2" class="tab-panel">Contenido de la Pestaña 2</div>
-    <div id="tab3" class="tab-panel">Contenido de la Pestaña 3</div>
-  </div>
-  <div class="progress mt-1" style="height: 0.7rem">
-    <div
-      class="progress-bar progress-bar-striped progress-bar-animated"
-      role="progressbar"
-      aria-valuenow="75"
-      aria-valuemin="0"
-      aria-valuemax="100"
-      [ngStyle]="{ width: barValue }"
-    ></div>
+    <div id="tab2" class="tab-panel row">
+      <div class="card opcionTurno" value="A">
+        <p>Turno tipo A</p>
+      </div>
+      <div class="card opcionTurno" value="B">
+        <p>Turno tipo B</p>
+      </div>
+      <div class="card opcionTurno" value="C">
+        <p>Turno tipo C</p>
+      </div>
+      <div class="card opcionTurno" value="D">
+        <p>Turno tipo D</p>
+      </div>
+      <div id="tab3" class="tab-panel">Contenido de la Pestaña 3</div>
+    </div>
+    <div class="progress mt-1" style="height: 0.7rem">
+      <div
+        class="progress-bar progress-bar-striped progress-bar-animated"
+        role="progressbar"
+        aria-valuenow="75"
+        aria-valuemin="0"
+        aria-valuemax="100"
+        [ngStyle]="{ width: barValue }"
+      ></div>
+    </div>
   </div>
 </div>
