avance generar turnos y gestion de turnos

--- a/client/src/app/Components/navbar/navbar.component.css
+++ b/client/src/app/Components/navbar/navbar.component.css
@@ -1,7 +1,7 @@
 .texto{
    
         color: rgb(107, 107, 107);
-        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        font-family: var(--texto_titulo);
         font-size: x-large;
         font-weight: 400;
       
