--- a/client/src/app/Components/gestion-turnos/gestion-turnos.component.html
+++ b/client/src/app/Components/gestion-turnos/gestion-turnos.component.html
@@ -1,1 +1,53 @@
-<p>gestion-turnos works!</p>
+<div id="wrapper">
+    <!-- Sidebar -->
+    <div id="sidebar-wrapper">
+      <ul class="sidebar-nav">
+        <li class="sidebar-brand"></li>
+        <li>
+          <a
+            class="nav-link rounded-5"
+            [routerLink]="'MyProfile'"
+            [routerLinkActive]="['active']"
+          >
+            Mi perfil
+          </a>
+        </li>
+        <li>
+          <a
+            class="nav-link rounded-5"
+            [routerLink]="'Home'"
+            [routerLinkActive]="['active']"
+          >
+            Estadisticas
+          </a>
+        </li>
+        <li>
+          <a
+            class="nav-link rounded-5"
+            [routerLink]="'Wallet'"
+            [routerLinkActive]="['active']"
+          >
+            Cartera
+          </a>
+        </li>
+      </ul>
+    </div>
+    <!-- /#sidebar-wrapper -->
+  
+    <!-- Page Content -->
+    <div id="page-content-wrapper">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-12">
+            <button class="btn btn-primary" id="menu-toggle" (click)="toggle()">
+              Mostrar menu
+            </button>
+            <router-outlet></router-outlet>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /#page-content-wrapper -->
+  </div>
+  <!-- /#wrapper -->
+  
