--- a/client/src/app/Components/registro-turnos/registro-turnos.component.css
+++ b/client/src/app/Components/registro-turnos/registro-turnos.component.css
@@ -59,7 +59,7 @@
     text-align: center;
     padding: 1.5rem;
     color: black;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: var(--texto_titulo);
     font-size: x-large;
     font-weight: 400;
   }
@@ -69,4 +69,21 @@
   }
  .activo{
   border: 0.1rem solid blue;
+ }
+ .btnGenerar{
+  margin: 1.5rem;
+  font-family: var(--texto_principal);
+  font-size:xx-large;
+  font-weight: 800;
+  border-radius: 5rem;
+  box-shadow: #333;
+  border: 0.1rem solid var(--color_texto);
+  background: rgba(0,250,210,0.7);
+ }
+ .textoGenerar{
+  text-align: center;
+  padding: 2rem;
+  font-family: var(--texto_principal);
+  font-weight: 700;
+  font-size: xx-large;
  }
