--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -5,5 +5,9 @@
     --color_texto:rgb(107, 107, 107);
     --fondo_verde:rgba(110, 245, 209, 0.7);
     --fondo_gris:rgba(200, 232, 223, 0.5);
-    
+    --texto_principal:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    --texto_titulo:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  }
+  body{
+    font-family: var(--texto_principal);
   }
