--- a/client/src/app/Components/gestion-turnos/gestion-turnos.component.css
+++ b/client/src/app/Components/gestion-turnos/gestion-turnos.component.css
@@ -24,7 +24,7 @@ body {
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
-    background: #000;
+    background:var(--fondo_gris);
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -38,7 +38,7 @@ body {
 #page-content-wrapper {
     width: 100%;
     position: absolute;
-    padding: 15px;
+    padding-top: 15px;
 }
 
 #wrapper.toggled #page-content-wrapper {
@@ -70,7 +70,7 @@ body {
 
 .sidebar-nav li a:hover {
     text-decoration: none;
-    color: #fff;
+    color: black;
     background: rgba(255,255,255,0.2);
 }
 
@@ -125,4 +125,28 @@ body {
     text-decoration: none;
     color: #fff;
     background: rgba(255,255,255,0.2);
+}
+
+.fondo{
+    background: #eee;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding:1.5rem;
+    min-height: 60vh;
+}
+
+.capa{
+    background: var(--fondo_gris);
+    padding: 2rem;
+    border:1px solid #ccc;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    min-height: 50vh;
+    
+}
+.columna{
+    min-width: 20vw;
+    max-width: 30vw;
+    align-self: center;
 }
