--- a/client/src/app/Components/gestion-turnos/gestion-turnos.component.css
+++ b/client/src/app/Components/gestion-turnos/gestion-turnos.component.css
@@ -18,8 +18,8 @@ body {
 
 #sidebar-wrapper {
     z-index: 1000;
-    position: fixed;
-    left: 250px;
+    position: absolute;
+    left: 250px ;
     width: 0;
     height: 100%;
     margin-left: -250px;
@@ -71,12 +71,13 @@ body {
 .sidebar-nav li a:hover {
     text-decoration: none;
     color: black;
-    background: rgba(255,255,255,0.2);
+    background: rgba(255,255,255,0.6);;
 }
 
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
     text-decoration: none;
+    color: #000;
 }
 
 .sidebar-nav > .sidebar-brand {
@@ -90,7 +91,7 @@ body {
 }
 
 .sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
+    color: #000;
     background: none;
 }
 
@@ -123,30 +124,7 @@ body {
 }
 .active{
     text-decoration: none;
-    color: #fff;
-    background: rgba(255,255,255,0.2);
+    color: #000;
+    background: rgba(255,255,255,0.6);
 }
 
-.fondo{
-    background: #eee;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding:1.5rem;
-    min-height: 60vh;
-}
-
-.capa{
-    background: var(--fondo_gris);
-    padding: 2rem;
-    border:1px solid #ccc;
-    border-radius: 4px;
-    display: flex;
-    flex-direction: column;
-    min-height: 50vh;
-    
-}
-.columna{
-    min-width: 20vw;
-    max-width: 30vw;
-    align-self: center;
-}
