--- a/client/src/app/Components/atender/atender.component.html
+++ b/client/src/app/Components/atender/atender.component.html
@@ -8,20 +8,36 @@
           <div class="row pt-1">
             <div class="col-6 mb-3">
               <h6>Codigo</h6>
-              <p class="text-muted">e</p>
-            </div>
-            <div class="col-6 mb-3">
-              <h6>estado</h6>
-              <p class="text-muted">e</p>
+              <p class="text-muted">{{ turno.codigo }}</p>
             </div>
             <div class="col-6 mb-3">
               <h6>fecha de generacion</h6>
-              <p class="text-muted">e</p>
+              <p class="text-muted">{{ turno.fecha | date : "dd/MM/yyyy" }}</p>
             </div>
           </div>
           <h6>Datos personales</h6>
           <hr class="mt-0 mb-4" />
-          <div class="row pt-1">2</div>
+          <div class="row pt-1">
+            <div class="col-6 mb-3">
+              <h6>Nombre</h6>
+              <p class="text-muted">
+                {{ turno.usuario?.primerNombre }}
+                {{ turno.usuario?.segundoNombre }}
+                {{ turno.usuario?.primerApellido }}
+                {{ turno.usuario?.segundoApellido }}
+              </p>
+            </div>
+            <div class="col-6 mb-3">
+              <h6>tipo de documento</h6>
+              <p class="text-muted">{{ turno.usuario?.tipoDocumento }}</p>
+            </div>
+            <div class="col-6 mb-3">
+              <h6>Documento</h6>
+              <p class="text-muted">
+                {{ turno.usuario?.numeroDocumento }}
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
