avance con funcionalidades de atender

--- a/client/src/app/Components/navbar/navbar.component.html
+++ b/client/src/app/Components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
       [routerLink]="'Registro'"
       [routerLinkActive]="['active']"
     >
-      Registar turno
+      Registrar turno
     </a>
   </li>
   <li class="nav-item" role="presentation">
