--- a/client/src/app/Components/atender/atender.component.html
+++ b/client/src/app/Components/atender/atender.component.html
@@ -2,7 +2,7 @@
   <div class="container capa">
     <div class="columna mb-3">
       <label class="texto">Turno en curso</label>
-      <div class="card">
+      <div class="card" [hidden]="!turnoEnCurso">
         <div class="card-body p-4">
           <hr class="mt-0 mb-4" />
           <div class="row pt-1">
@@ -40,13 +40,17 @@
           </div>
         </div>
       </div>
+      <div class="card" [hidden]="turnoEnCurso">
+        <p class="textoInfo">No hay ningun turno asignado</p>
+      </div>
     </div>
     <div class="columna mb-3">
       <button
         type="submit"
         class="btn btn-primary"
         style="align-self: center"
-        #bttnSiguiente
+        #bttnCancelar
+        [disabled]="!turnoEnCurso"
       >
         Cancelar
       </button>
@@ -54,9 +58,20 @@
         type="submit"
         class="btn btn-primary m-1"
         style="align-self: center"
-        #bttnSiguiente
+        #bttnCompletar
+        (click)="completar()"
+        [disabled]="!turnoEnCurso"
       >
         Completar
+      </button>
+      <button
+        type="submit"
+        class="btn btn-primary m-1"
+        style="align-self: center"
+        #bttnDevolver
+        [disabled]="!turnoEnCurso"
+      >
+        Devolver a pendientes
       </button>
     </div>
     <button
@@ -64,6 +79,8 @@
       class="btn btn-primary w-25"
       style="align-self: self-end"
       #bttnSiguiente
+      (click)="siguiente()"
+      [disabled]="!TurnoCompletado"
     >
       Siguiente turno
     </button>
