--- a/client/src/app/Components/gestion-turnos/gestion-turnos.component.html
+++ b/client/src/app/Components/gestion-turnos/gestion-turnos.component.html
@@ -12,7 +12,7 @@
       />
     </div>
     <div class="columna mb-3">
-      <label class="form-label">Clave</label>
+      <label class="form-label">Contraseña</label>
       <input
         type="password"
         class="form-control"
@@ -22,7 +22,7 @@
         #Clave
       />
       <div class="msg-error" [hidden]="!negado">
-        Ingreso negado, datos erroneos
+        Datos de inicio de sesión erróneos.
       </div>
     </div>
 
@@ -43,7 +43,7 @@
   <div id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <span class="navbar-brand texto">Modulo {{ modulo }}</span>
+        <span class="navbar-brand texto">Módulo {{ modulo }}</span>
       </li>
       <li>
         <a
@@ -51,7 +51,7 @@
           [routerLink]="'Atender'"
           [routerLinkActive]="['active']"
         >
-          Atender turno
+          Atender turnos
         </a>
       </li>
       <li>
@@ -82,7 +82,7 @@
               d="M3 8.812a4.999 4.999 0 0 1 2.578-4.375l-.485-.874A6 6 0 1 0 11 3.616l-.501.865A5 5 0 1 1 3 8.812z"
             />
           </svg>
-          Cerrar Modulo
+          Cerrar sesión
         </div>
       </li>
     </ul>
