--- a/client/src/app/Components/navbar/navbar.component.html
+++ b/client/src/app/Components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
     --bs-nav-pills-link-active-bg: rgba(110, 245, 209, 0.7);
   "
 >
-  <li>
+  <li class="p-2">
     <span class="navbar-brand texto">Fila0</span>
   </li>
   <li class="nav-item" role="presentation">
@@ -17,7 +17,7 @@
       [routerLink]="'Registro'"
       [routerLinkActive]="['active']"
     >
-      Registar turno
+      Registrar turno
     </a>
   </li>
   <li class="nav-item" role="presentation">
