--- a/client/src/app/Components/gestion-turnos/gestion-turnos.component.html
+++ b/client/src/app/Components/gestion-turnos/gestion-turnos.component.html
@@ -64,6 +64,24 @@
         </a>
       </li>
       <li>
+        <a
+          class="nav-link rounded-5"
+          [routerLink]="'Completados'"
+          [routerLinkActive]="['active']"
+        >
+          Turnos completados
+        </a>
+      </li>
+      <li>
+        <a
+          class="nav-link rounded-5"
+          [routerLink]="'Cancelados'"
+          [routerLinkActive]="['active']"
+        >
+          Turnos cancelados
+        </a>
+      </li>
+      <li>
         <div
           class="nav-link rounded-5"
           style="cursor: pointer"
