--- a/client/src/app/Components/registro-turnos/registro-turnos.component.html
+++ b/client/src/app/Components/registro-turnos/registro-turnos.component.html
@@ -61,8 +61,9 @@
     <div id="tab3" class="tab-panel row">
       <button
         class="btnGenerar"
+        #btnGenerar
         [disabled]="progresoValor != 100"
-        (click)="generarTurno()"
+        (click)="generarTurno(btnGenerar)"
       >
         Generar turno
       </button>
@@ -71,25 +72,24 @@
           Es necesario terminar los pasos anteriores para generar el turno.
         </p>
       </div>
-      <div class="card" *ngIf="progresoValor == 100">
-        <div class="card-body p-4">
-          <h6>Informacion del último turno generado</h6>
-          <hr class="mt-0 mb-4" />
-          <div class="row pt-1">
-            <div class="col-6 mb-3">
-              <h6>Código</h6>
-              <p class="text-muted">{{ turno.codigo }}</p>
-            </div>
-            <div class="col-6 mb-3">
-              <h6>Estado</h6>
-              <p class="text-muted">{{ turno.estado }}</p>
-            </div>
-          </div>
-          <h6>Fecha de generación</h6>
-          <hr class="mt-0 mb-4" />
-          <div class="row pt-1">
-            {{ turno.fecha | date : "dd/MM/yyyy HH:mm:ss" }}
-          </div>
+      <div class="plan-card" *ngIf="turnoGenerado">
+        <h3>Turno generado</h3>
+        <div class="etiquet-price">
+          <p>{{ turno.codigo }}</p>
+          <div></div>
+        </div>
+        <div class="benefits-list">
+          <ul>
+            <li>
+              <span>Estado: {{ turno.estado }}</span>
+            </li>
+            <li>
+              <span
+                >Fecha de generación:
+                {{ turno.fecha | date : "dd/MM/yyyy HH:mm:ss" }}</span
+              >
+            </li>
+          </ul>
         </div>
       </div>
     </div>
